@@ -1,5 +1,5 @@
 {
-    "version": "1.2.2",
+    "version": "1.3.0",
     "scripts": {
         "start": "electron ./static --dev"
     },
